bin/testsuite/tests/compiler/src/errors/compiler137.swg
#global testerror "Err0332";
b: bool;
//var a: b{};